[gd_scene load_steps=80 format=3 uid="uid://bhk7i0bsqspsy"]

[ext_resource type="Texture2D" uid="uid://omu30pm00fnn" path="res://assets/sky/1.png" id="1_ir15t"]
[ext_resource type="PackedScene" uid="uid://dbwj6t0r0pamj" path="res://assets/models/tree_thin.glb" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://b7ij482s288hc" path="res://assets/models/ground_grass.glb" id="2_lbhrr"]
[ext_resource type="PackedScene" uid="uid://d310wkido4uno" path="res://assets/models/road-straight.glb" id="3_iywne"]
[ext_resource type="PackedScene" uid="uid://bf5yj54f57nqc" path="res://assets/models/tree_tall.glb" id="4_iywne"]
[ext_resource type="PackedScene" uid="uid://dfcbadsgfrvg5" path="res://assets/models/tree_simple.glb" id="5_p57ef"]
[ext_resource type="AudioStream" uid="uid://cyl61v5uj8ym2" path="res://assets/audio/music/s1.wav" id="6_p57ef"]
[ext_resource type="Texture2D" uid="uid://cnboef01dv7uh" path="res://assets/art/Bear/Bear_Idle.png" id="7_dinhu"]
[ext_resource type="Texture2D" uid="uid://cd8dba5prek2i" path="res://assets/art/Deer/Deer_Idle.png" id="7_gee14"]
[ext_resource type="Texture2D" uid="uid://j5wrsjp3muma" path="res://assets/art/Deer/Deer_Walk.png" id="8_0tnpc"]
[ext_resource type="Texture2D" uid="uid://biuns0k88d1sm" path="res://assets/art/Bear/Bear_Run.png" id="9_kvuet"]
[ext_resource type="Texture2D" uid="uid://cmhxqcnkevb6e" path="res://assets/art/Deer/Deer_Run.png" id="10_trtic"]
[ext_resource type="Texture2D" uid="uid://dqgdrbpd3xq6t" path="res://assets/art/Bear/Bear_Walk.png" id="11_ir15t"]
[ext_resource type="Texture2D" uid="uid://v1jmvxqx3ko8" path="res://assets/art/Car/front.png" id="13_trtic"]
[ext_resource type="Texture2D" uid="uid://fstqnhwgpshy" path="res://assets/art/Car/rear.png" id="14_ir15t"]
[ext_resource type="Script" uid="uid://hq2sbydet47c" path="res://scripts/car.gd" id="14_trtic"]
[ext_resource type="Shader" uid="uid://cbkhjxyw54nxu" path="res://scripts/car.gdshader" id="15_264po"]
[ext_resource type="PackedScene" uid="uid://xkqnqj2abwnr" path="res://assets/models/cc0_-_camera.glb" id="16_rysoc"]
[ext_resource type="PackedScene" uid="uid://n2lfa8ywtsq2" path="res://assets/models/light-square.glb" id="17_ssvqc"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ca42v"]
panorama = ExtResource("1_ir15t")
filter = false

[sub_resource type="Sky" id="Sky_uwrxv"]
sky_material = SubResource("PanoramaSkyMaterial_ca42v")

[sub_resource type="Environment" id="Environment_yqjtg"]
background_mode = 2
sky = SubResource("Sky_uwrxv")
sky_rotation = Vector3(3.65646, 0, 0)
ambient_light_energy = 0.0
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lnu2h"]
albedo_color = Color(0.521141, 0.521141, 0.521141, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lbhrr"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ssvqc"]
size = Vector3(9, 83, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_264po"]
size = Vector3(9, 83, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_sww3w"]
atlas = ExtResource("7_dinhu")
region = Rect2(0, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_suyxu"]
atlas = ExtResource("7_dinhu")
region = Rect2(64, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgl2t"]
atlas = ExtResource("7_dinhu")
region = Rect2(128, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_qouja"]
atlas = ExtResource("7_dinhu")
region = Rect2(192, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wljb1"]
atlas = ExtResource("7_dinhu")
region = Rect2(256, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2yb1"]
atlas = ExtResource("7_dinhu")
region = Rect2(320, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_js0lu"]
atlas = ExtResource("7_dinhu")
region = Rect2(384, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxtfn"]
atlas = ExtResource("7_dinhu")
region = Rect2(448, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_twgab"]
atlas = ExtResource("7_dinhu")
region = Rect2(512, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_02fa5"]
atlas = ExtResource("7_dinhu")
region = Rect2(576, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_nepv3"]
atlas = ExtResource("7_dinhu")
region = Rect2(640, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7025r"]
atlas = ExtResource("7_dinhu")
region = Rect2(704, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtaks"]
atlas = ExtResource("7_gee14")
region = Rect2(0, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvpfn"]
atlas = ExtResource("7_gee14")
region = Rect2(72, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_dinhu"]
atlas = ExtResource("7_gee14")
region = Rect2(144, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvuet"]
atlas = ExtResource("7_gee14")
region = Rect2(216, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtic"]
atlas = ExtResource("7_gee14")
region = Rect2(288, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir15t"]
atlas = ExtResource("7_gee14")
region = Rect2(360, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42v"]
atlas = ExtResource("7_gee14")
region = Rect2(432, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_rysoc"]
atlas = ExtResource("7_gee14")
region = Rect2(504, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvqc"]
atlas = ExtResource("7_gee14")
region = Rect2(576, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("7_gee14")
region = Rect2(648, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4url"]
atlas = ExtResource("9_kvuet")
region = Rect2(0, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ool0"]
atlas = ExtResource("9_kvuet")
region = Rect2(64, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr1ej"]
atlas = ExtResource("9_kvuet")
region = Rect2(128, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_05nbr"]
atlas = ExtResource("9_kvuet")
region = Rect2(192, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sl42"]
atlas = ExtResource("9_kvuet")
region = Rect2(256, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaba0"]
atlas = ExtResource("10_trtic")
region = Rect2(0, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_458eo"]
atlas = ExtResource("10_trtic")
region = Rect2(72, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3rex"]
atlas = ExtResource("10_trtic")
region = Rect2(144, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_fedci"]
atlas = ExtResource("10_trtic")
region = Rect2(216, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qswn"]
atlas = ExtResource("10_trtic")
region = Rect2(288, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm0al"]
atlas = ExtResource("10_trtic")
region = Rect2(360, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4re6"]
atlas = ExtResource("11_ir15t")
region = Rect2(0, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf7vy"]
atlas = ExtResource("11_ir15t")
region = Rect2(64, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8ni1"]
atlas = ExtResource("11_ir15t")
region = Rect2(128, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hbvx"]
atlas = ExtResource("11_ir15t")
region = Rect2(192, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8j3a"]
atlas = ExtResource("11_ir15t")
region = Rect2(256, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms3bu"]
atlas = ExtResource("11_ir15t")
region = Rect2(320, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ixpq"]
atlas = ExtResource("11_ir15t")
region = Rect2(384, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk1p3"]
atlas = ExtResource("11_ir15t")
region = Rect2(448, 0, 64, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("8_0tnpc")
region = Rect2(0, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_5newe"]
atlas = ExtResource("8_0tnpc")
region = Rect2(72, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s47"]
atlas = ExtResource("8_0tnpc")
region = Rect2(144, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt5mj"]
atlas = ExtResource("8_0tnpc")
region = Rect2(216, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1j6l"]
atlas = ExtResource("8_0tnpc")
region = Rect2(288, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl11u"]
atlas = ExtResource("8_0tnpc")
region = Rect2(360, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhx41"]
atlas = ExtResource("8_0tnpc")
region = Rect2(432, 0, 72, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnb83"]
atlas = ExtResource("8_0tnpc")
region = Rect2(504, 0, 72, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_sww3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sww3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suyxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgl2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qouja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wljb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2yb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js0lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxtfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twgab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02fa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nepv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7025r")
}],
"loop": true,
"name": &"idle_bear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtaks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvpfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dinhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvuet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir15t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_264po")
}],
"loop": true,
"name": &"idle_deer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4url")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ool0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr1ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05nbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sl42")
}],
"loop": true,
"name": &"run_bear",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaba0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_458eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3rex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fedci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qswn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm0al")
}],
"loop": true,
"name": &"run_deer",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4re6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf7vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8ni1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hbvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8j3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms3bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ixpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk1p3")
}],
"loop": true,
"name": &"walk_bear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5newe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37s47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt5mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1j6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl11u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhx41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnb83")
}],
"loop": true,
"name": &"walk_deer",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_1kice"]
size = Vector3(5.91579, 4.11237, 0.28186)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_264po"]
render_priority = 0
shader = ExtResource("15_264po")
shader_parameter/grayscaleTexture = ExtResource("13_trtic")
shader_parameter/lowColor = Vector4(0, 0, 0, 1)
shader_parameter/midColor = Vector4(0, 0, 0, 1)
shader_parameter/highColor = Vector4(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1kice"]
render_priority = 0
shader = ExtResource("15_264po")
shader_parameter/grayscaleTexture = ExtResource("14_ir15t")
shader_parameter/lowColor = Vector4(0, 0, 0, 1)
shader_parameter/midColor = Vector4(0, 0, 0, 1)
shader_parameter/highColor = Vector4(1, 1, 1, 1)

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yqjtg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.68
light_bake_mode = 1
shadow_enabled = true

[node name="Map" type="Node" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
transform = Transform3D(150, 0, 0, 0, 1, 0, 0, 0, 75, 0, 0, 0)

[node name="wall1" type="CSGCombiner3D" parent="Map"]

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/wall1"]
transform = Transform3D(150, 0, 0, 0, 20, 0, 0, 0, 2, 0, 10, -36.5)
material = SubResource("StandardMaterial3D_lnu2h")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Map/wall1"]
transform = Transform3D(17.9627, 0, 0, 0, -4.37114e-08, -29.2006, 0, 1, -1.2764e-06, -8.61672, 0.583617, -35.8795)
sides = 20
material = SubResource("StandardMaterial3D_lbhrr")

[node name="tunnel1" type="Area3D" parent="Map/wall1/CSGCylinder3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/wall1/CSGCylinder3D/tunnel1"]
transform = Transform3D(1, 0, 0, 0, 1, -1.13687e-13, 0, 0, 1, -2.08616e-07, -40.2081, -0.5)
shape = SubResource("BoxShape3D_ssvqc")

[node name="wall2" type="CSGCombiner3D" parent="Map"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 6.38186e-06, 0, 6)

[node name="CSGBox3D2" type="CSGBox3D" parent="Map/wall2"]
transform = Transform3D(150, 0, 0, 0, 20, 0, 0, 0, 2, 0, 10, -36.5)
material = SubResource("StandardMaterial3D_lnu2h")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Map/wall2"]
transform = Transform3D(17.9627, 0, 0, 0, -4.37114e-08, -29.2006, 0, 1, -1.2764e-06, 8.56499, 0.583617, -36.007)
sides = 20
material = SubResource("StandardMaterial3D_lbhrr")

[node name="tunnel2" type="Area3D" parent="Map/wall2/CSGCylinder3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/wall2/CSGCylinder3D/tunnel2"]
transform = Transform3D(1.00039, 4.44089e-16, 0, 0, 1.00039, -1.13687e-13, 2.11758e-22, 0, 1.00039, -2.98023e-08, -40.332, -0.5)
shape = SubResource("BoxShape3D_264po")
debug_color = Color(1, 1, 1, 1)

[node name="floor" parent="Map" instance=ExtResource("2_lbhrr")]
transform = Transform3D(149.76, 0, 0, 0, 20, 0, 0, 0, 81.4, -0.0718689, 1.61695, 0.942606)

[node name="road" parent="Map" instance=ExtResource("3_iywne")]
transform = Transform3D(-3.56685e-06, 0, 16, 0, 16, 0, -81.6, 0, -6.99382e-07, -8.60978, 0.610689, 2.77647)

[node name="trees" type="Node" parent="."]

[node name="tree_thin2" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -61.0619, -4.76837e-07, -13.0657)

[node name="tree_thin3" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -30.8588, -4.76837e-07, 11.327)

[node name="tree_thin4" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -47.9717, -4.76837e-07, -14.0254)

[node name="tree_thin5" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -59.0654, -4.76837e-07, 32.4722)

[node name="tree_thin6" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -54.812, -4.76837e-07, 9.60485)

[node name="tree_tall2" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -43.6485, 0.851417, 30.2371)

[node name="tree_tall3" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -33.2647, 0.851417, 5.53011)

[node name="tree_tall4" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -40.1764, 0.851417, -18.4204)

[node name="tree_tall5" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -22.7463, 0.851417, 26.8648)

[node name="tree_tall6" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -42.6977, 0.851417, 11.146)

[node name="tree_tall7" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -58.9174, 0.851417, 22.6078)

[node name="tree_simple2" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -25.4808, 1.01863, -7.55562)

[node name="tree_simple3" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -35.1172, 1.01863, 21.6718)

[node name="tree_simple4" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -31.1349, 1.01863, 32.3742)

[node name="tree_simple5" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -31.1349, 1.01863, 32.3742)

[node name="tree_thin7" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 26.3045, -4.76837e-07, 31.6525)

[node name="tree_thin8" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 29.4944, -4.76837e-07, -7.03936)

[node name="tree_thin9" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 18.1508, -4.76837e-07, 21.3669)

[node name="tree_thin10" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 62.8401, -4.76837e-07, 4.3974)

[node name="tree_thin11" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 41.5382, -4.76837e-07, 13.7373)

[node name="tree_tall8" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 52.3235, 0.851417, -7.09505)

[node name="tree_tall9" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 26.0534, 0.851417, -1.79048)

[node name="tree_tall10" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 10.1333, 0.851417, 17.3916)

[node name="tree_tall11" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 37.7824, 0.851417, -22.4843)

[node name="tree_tall12" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 36.0013, 0.851417, 2.85272)

[node name="tree_tall13" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 54.5994, 0.851417, 9.82132)

[node name="tree_simple6" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 10.8555, 1.01863, -0.86988)

[node name="tree_simple7" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 40.4436, 1.01863, -9.33429)

[node name="tree_simple8" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 47.055, 1.01863, -18.645)

[node name="tree_simple9" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(0.00111723, 0, -8, 0, 8, 0, 8, 0, 0.00111723, 47.055, 1.01863, -18.645)

[node name="tree_thin12" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -40.7384, -4.76837e-07, 32.3627)

[node name="tree_thin13" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -53.2638, -4.76837e-07, -4.38432)

[node name="tree_thin14" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -52.321, -4.76837e-07, 26.1886)

[node name="tree_thin15" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -18.1251, -4.76837e-07, -7.21416)

[node name="tree_thin16" parent="trees" instance=ExtResource("1_lnu2h")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -33.9256, -4.76837e-07, 9.85491)

[node name="tree_tall14" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -32.3559, 0.851417, -13.5512)

[node name="tree_tall15" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -54.3227, 0.851417, 1.80198)

[node name="tree_tall16" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -61.2589, 0.851417, 25.7454)

[node name="tree_tall17" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -51.8326, 0.851417, -21.854)

[node name="tree_tall18" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -43.3482, 0.851417, 2.08665)

[node name="tree_tall19" parent="trees" instance=ExtResource("4_iywne")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -23.5145, 0.851417, 1.04917)

[node name="tree_simple10" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -67.8888, 1.01863, 8.71467)

[node name="tree_simple11" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -44.1418, 1.01863, -10.8604)

[node name="tree_simple12" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -41.7983, 1.01863, -22.0367)

[node name="tree_simple13" parent="trees" instance=ExtResource("5_p57ef")]
transform = Transform3D(3.1955, 0, -7.33408, 0, 8, 0, 7.33408, 0, 3.1955, -41.7983, 1.01863, -22.0367)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_p57ef")
autoplay = true
bus = &"BGM"

[node name="aminal" type="AnimatedSprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -17.5073, 3.16626, 0)
flip_h = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_sww3w")
animation = &"run_deer"
frame_progress = 0.138918

[node name="car" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5.4, 3, -1.3)
rotation_order = 0
script = ExtResource("14_trtic")

[node name="carHitbox" type="Area3D" parent="car"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="car/carHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0295639, 0.0191345, -0.0696411)
shape = SubResource("BoxShape3D_1kice")

[node name="carFront" type="Sprite3D" parent="car/carHitbox/CollisionShape3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
material_override = SubResource("ShaderMaterial_264po")
double_sided = false
texture_filter = 0
texture = ExtResource("13_trtic")

[node name="carBack" type="Sprite3D" parent="car/carHitbox/CollisionShape3D"]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 0, 0, 0)
material_override = SubResource("ShaderMaterial_1kice")
double_sided = false
texture_filter = 0
texture = ExtResource("14_ir15t")

[node name="lantern" type="Node" parent="."]

[node name="Sketchfab_Scene" parent="lantern" instance=ExtResource("16_rysoc")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.434169, 7.06634, -22.4912)

[node name="light-square3" parent="lantern" instance=ExtResource("17_ssvqc")]
transform = Transform3D(1.96701e-06, 0, 15, 0, 15, 0, -15, 0, 1.96701e-06, 0.474251, 1, -22.9133)

[node name="Camera3D2" type="Camera3D" parent="lantern"]
transform = Transform3D(-0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, 0.330372, 7.12659, -21.6894)
current = true
fov = 40.0

[node name="lantern2" type="Node" parent="."]

[node name="light-square2" parent="lantern2" instance=ExtResource("17_ssvqc")]
transform = Transform3D(-6.55671e-07, 0, -15, 0, 15, 0, 15, 0, -6.55671e-07, -17.5257, 1, 27.0867)

[node name="Sketchfab_Scene" parent="lantern2" instance=ExtResource("16_rysoc")]
transform = Transform3D(-2, 0, -3.01992e-07, 0, 2, 0, 3.01992e-07, 0, -2, -17.4816, 8.29508, 26.7094)

[node name="Camera3D" type="Camera3D" parent="lantern2"]
transform = Transform3D(0.990596, -0.00214911, -0.136805, 0.0354122, 0.969834, 0.241181, 0.13216, -0.243758, 0.960789, -17.429, 8.30396, 25.6415)
fov = 40.0

[connection signal="area_entered" from="Map/wall1/CSGCylinder3D/tunnel1" to="car" method="_on_tunnel_1_area_entered"]
[connection signal="area_entered" from="Map/wall2/CSGCylinder3D/tunnel2" to="car" method="_on_tunnel_2_area_entered"]
